Documentation of new features

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -607,10 +607,10 @@ saveOnSignal = true
 # Pressure is specified explicitly. For the description, refer to the general section
 pressure = 0.1
 
-# For how many full MC cycles the thermalization should be performed
+# For how many full MC cycles the thermalization should be performed. If 0, thermalisation will be skipped.
 thermalisationCycles = 10000
 
-# For how many full MC cycles averaging should be performed
+# For how many full MC cycles averaging should be performed. If 0, averaging will be skipped.
 averagingCycles = 20000
 
 # Ensemble averages are taken "[averagingEvery]" cycles (default value: 100)
