Some cleanup in GCC and Clang warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ if (CMAKE_BUILD_TYPE MATCHES "Release")
     add_compile_options(-O3)
 elseif (CMAKE_BUILD_TYPE MATCHES "Debug")
     if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-        add_compile_definitions(_GLIBCXX_CONCEPT_CHECKS _GLIBCXX_DEBUG _GLIBCXX_DEBUG_PEDANTIC _GLIBCXX_CONCEPT_CHECKS)
+        add_compile_definitions(_GLIBCXX_DEBUG _GLIBCXX_DEBUG_PEDANTIC)
     endif()
     add_compile_options(-gdwarf-4)
 endif()
