--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -46,7 +46,7 @@
 # The version of RAMPACK this file is targeted to. Input file versions lower than the current RAMPACK version should be
 # parsed properly, however some new features will be limited.
 # Current version is: 0.5
-version = 0.5\\
+version = 0.5
 
 # Initial dimensions of the orthorhombic simulation box. Supported variants:
 # 1. "[side length]"
@@ -274,11 +274,14 @@ moveTypes = translation 10
 # of the diagonal part of stress tensor (directional pressures) or even full triclinic relaxation of sheer pressure.
 # If "scalingType" is variant 1.-3. and the box is triclinic, scaling is performed height-wise, ie. face angles remain
 # unaltered. Alternatives for "scalingType":
-# 1. "delta V"
+# 1. "disabled"
+#    Scaling is disabled altogether. As a consequence, NVT run is performed.
+#
+# 2. "delta V"
 #    The ratio of all box heights remains constant while the volume is changed by an amount sampled from
 #    [-"volumeStepSize", "volumeStepSize"] interval uniformly
 #
-# 2. "(independent) [scaling distribution] [direction specification]"
+# 3. "(independent) [scaling distribution] [direction specification]"
 #    Generalized scaling, where one can customize type of the scaling, which directions should be scaled, which should
 #    be coupled, whether scaling is performed in one direction per move or all together, etc.
 #
@@ -311,7 +314,7 @@ moveTypes = translation 10
 #    uncoupled direction is selected at random during volume move. Staying with "(xy)z" example, either both "x" and "y"
 #    will be scaled in a coupled manner and "z" unscaled, or "x" and "y" unaltered, and "z" scaled.
 #
-# 3. "(independent) delta triclinic"
+# 4. "(independent) delta triclinic"
 #    Box side vectors are translated by random vectors with coordinates sampled uniformly from
 #    [-"volumeStepSize", "volumeStepSize"] interval. This scaling types enables to perform simulations in
 #    isobaric-isotension ensemble (relaxing off-diagonal parts of stress tensor). If "independent" is specified, only a
