Notice in old INI sample inputs

--- a/sample_inputs/legacy/integration.ini
+++ b/sample_inputs/legacy/integration.ini
@@ -1,3 +1,10 @@
+
+################################################################################################
+########## THIS IS A LEGACY FORMAT KEPT TO SUPPORT SIMULATION DATA BEFORE PYON FORMAT ##########
+##########                      DO NOT USE IT IN NEW SIMULATIONS                      ##########
+##########                    PLEASE SEE THE FILE integration.pyon                    ##########
+################################################################################################
+
 # This is an example INI input file for the `casino' mode specifying a whole NpT gas-liquid-solid simulation sequence
 # for hard spheres. The user is encouraged to read the documentation carefully and run this test file to see how it
 # works in practice.
@@ -45,7 +52,7 @@
 
 # The version of RAMPACK this file is targeted to. Input file versions lower than the current RAMPACK version should be
 # parsed properly, however some new features will be limited.
-# Current version is: 0.8.0
+# The last version supported by INI format is: 0.8.0
 version = 0.8.0
 
 # Initial dimensions of the orthorhombic simulation box. Supported variants:
