--- a/sample_inputs/legacy/overlap_reduction.ini
+++ b/sample_inputs/legacy/overlap_reduction.ini
@@ -1,3 +1,10 @@
+
+################################################################################################
+########## THIS IS A LEGACY FORMAT KEPT TO SUPPORT SIMULATION DATA BEFORE PYON FORMAT ##########
+##########                      DO NOT USE IT IN NEW SIMULATIONS                      ##########
+##########                 PLEASE SEE THE FILE overlap_reduction.pyon                 ##########
+################################################################################################
+
 # This is an example INI input file for the `casino' mode specifying overlap reduction of too tightly packed hard
 # spheres (over maximal 0.74 packing fraction), followed by an integration run with short thermalization phase.
 #
