--- a/.gitmodules
+++ b/.gitmodules
@@ -10,12 +10,12 @@
 [submodule "extern/ZipIterator"]
 	path = extern/ZipIterator
 	url = https://github.com/dpellegr/ZipIterator.git
-[submodule "extern/quickhull"]
-	path = extern/quickhull
-	url = https://github.com/akuukka/quickhull.git
 [submodule "extern/Root-Finder"]
 	path = extern/Root-Finder
 	url = https://github.com/ZhepeiWang/Root-Finder.git
 [submodule "extern/eigen"]
 	path = extern/eigen
 	url = https://gitlab.com/libeigen/eigen.git
+[submodule "extern/quickhull"]
+	path = extern/quickhull
+	url = https://github.com/PKua007/quickhull.git
