Optional static linking + DEB/RPM packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
-project(rampack)
+project(rampack VERSION 0.15.0)
 
+# Available options
+option(RAMPACK_STATIC_LINKING "Build no-dependency static executable" OFF)
+option(RAMPACK_BUILD_TESTS "Build unit and validation tests" OFF)
+
+add_compile_definitions(RAMPACK_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
+                        RAMPACK_VERSION_MINOR=${PROJECT_VERSION_MINOR}
+                        RAMPACK_VERSION_PATCH=${PROJECT_VERSION_PATCH})
 
 # Check compiler support
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
@@ -60,9 +67,43 @@ if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/Catch2/CMakeLists.txt" OR
     endif()
 endif()
 
+# Static linking only available in GCC
+if (RAMPACK_STATIC_LINKING)
+    if (NOT CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+        message(FATAL_ERROR "RAMPACK_STATIC_LINKING: Static linking is supported only for the GNU compiler")
+    endif()
+endif()
+
+# Link OpenMP if available
 find_package(OpenMP)
 if(OpenMP_CXX_FOUND)
-    link_libraries(OpenMP::OpenMP_CXX)
+    if (RAMPACK_STATIC_LINKING)
+        # We manually create StaticOpenMP target with static versions of libgomp and libpthread
+        execute_process(COMMAND ${CMAKE_CXX_COMPILER} --print-file-name=libgomp.a
+                        OUTPUT_VARIABLE RAMPACK_LIBGOMP_PATH
+                        OUTPUT_STRIP_TRAILING_WHITESPACE)
+        execute_process(COMMAND ${CMAKE_CXX_COMPILER} --print-file-name=libpthread.a
+                        OUTPUT_VARIABLE RAMPACK_LIBPTHREAD_PATH
+                        OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+        if (NOT EXISTS "${RAMPACK_LIBGOMP_PATH}")
+            message(FATAL_ERROR "RAMPACK_STATIC_LINKING: Cannot find static version of libgomp")
+        endif()
+        if (NOT EXISTS "${RAMPACK_LIBPTHREAD_PATH}")
+            message(FATAL_ERROR "RAMPACK_STATIC_LINKING: Cannot find static version of libpthread")
+        endif()
+        message(STATUS "Found libgomp.a and libpthread.a for static linking")
+
+        add_library(StaticOpenMP IMPORTED INTERFACE)
+        set_property(TARGET StaticOpenMP PROPERTY INTERFACE_COMPILE_OPTIONS ${OpenMP_CXX_FLAGS})
+        set_property(TARGET StaticOpenMP
+                     PROPERTY INTERFACE_LINK_LIBRARIES "${RAMPACK_LIBGOMP_PATH}" "${RAMPACK_LIBPTHREAD_PATH}")
+        link_libraries(StaticOpenMP)
+
+        link_libraries(-static)
+    else()
+        link_libraries(OpenMP::OpenMP_CXX)
+    endif()
 endif()
 
 # Explicitly link filesystem library for older versions of GCC
@@ -124,3 +165,17 @@ if(BASH_FOUND)
             DESTINATION "share/bash-completion/completions"
             RENAME "rampack")
 endif()
+
+# Prepare DEB and RPM packaging
+set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
+set(CPACK_PACKAGE_VENDOR "Piotr Kubala and rampack Contributors")
+set(CPACK_PACKAGE_DESCRIPTION "The software for simulating particle systems using different flavors of Monte Carlo sampling.")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Random And Maximal PACKing PACKage.")
+set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/PKua007/rampack")
+set(CPACK_PACKAGE_MAINTAINER "${CPACK_PACKAGE_VENDOR}")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.md")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_MAINTAINER}")
+
+include(CPack)
