--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,8 @@ endif()
 if (CMAKE_BUILD_TYPE MATCHES "Release")
     if (RAMPACK_ARCH_NATIVE)
         # Apple silicon does not like -march=native option
-        if (NOT (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang" AND CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64"))add_compile_options(-march=native)
+        if (NOT (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang" AND CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64"))
+            add_compile_options(-march=native)
         endif()
     endif()
     add_compile_options(-O3)
