--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_compile_definitions(RAMPACK_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
                         RAMPACK_VERSION_MINOR=${PROJECT_VERSION_MINOR}
                         RAMPACK_VERSION_PATCH=${PROJECT_VERSION_PATCH})
 
-add_compile_definitions(RAMPACK_ROOT_DIR="\"${PROJECT_SOURCE_DIR}\"")
+add_compile_definitions("RAMPACK_ROOT_DIR=\"${PROJECT_SOURCE_DIR}\"")
 
 # Check compiler support
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
